# krate-audio

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  code-smell-audit.md  index.html  innexus_display_transport_patch.diff  job-logs-clang-tidy-dsp.txt  job-logs-clang-tidy-gradus-postfix.txt  job-logs-clang-tidy-gradus.txt  job-logs-pluginval.txt  sitemap.xml  version.json  versions.json
dsp/: CLAUDE.md  CMakeLists.txt  lint_all_headers.cpp
dsp/tests/: .clang-tidy  CMakeLists.txt  dsp_test_main.cpp
dsp/tests/unit/: test_dsp_utils.cpp
plugins/disrumpo/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  version.json
plugins/disrumpo/docs/: index.html
plugins/disrumpo/resources/: au-info.plist  editor.uidesc  win32resource.rc  win32resource.rc.in
plugins/disrumpo/src/: entry.cpp  plugin_ids.h  version.h  version.h.in
plugins/disrumpo/tests/: CMakeLists.txt  vstgui_test_stubs.cpp
plugins/gradus/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  MANUAL.md  version.json
plugins/gradus/docs/: index.html  manual-template.html
plugins/gradus/resources/: au-info.plist  editor.uidesc  win32resource.rc  win32resource.rc.in
plugins/gradus/src/: entry.cpp  plugin_ids.h  version.h  version.h.in
plugins/gradus/tests/: CMakeLists.txt
plugins/innexus/tests/: CMakeLists.txt  vstgui_test_stubs.cpp
plugins/iterum/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  version.json
plugins/iterum/docs/: index.html
plugins/iterum/resources/: au-info.plist  editor.uidesc  win32resource.rc
plugins/iterum/src/: delay_mode.h  entry.cpp  plugin_ids.h  version.h  version.h.in
plugins/iterum/tests/: CMakeLists.txt  vstgui_test_stubs.cpp
plugins/membrum/: AUDIT-signal-path-2026-06-07.findings.json  AUDIT-signal-path-2026-06-07.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CRASH-REDESIGN-PLAN.md  INVESTIGATION-snare-body-2026-07-01.md  MANUAL.md  PLAN-gain-staging-2026-06-07.md  PLAN-wire-coupling-2026-07-13.md  PRESET-RETUNE-PLAN.md  version.json
plugins/membrum/docs/: correctness-audit.md  index.html  manual-template.html  membrum_signal_flow.dot  tom-depth-implementation-plan.md
plugins/membrum/preset-retune/: 00-param-dictionary.md  01-current-state.md  02-archetype-index.md  current-state.json  param-dictionary.json  recipes.json
plugins/membrum/resources/: au-info.plist  editor.uidesc  win32resource.rc  win32resource.rc.in
plugins/membrum/src/: entry.cpp  plugin_ids.h  version.h  version.h.in
plugins/membrum/tests/: CMakeLists.txt  vstgui_test_stubs.cpp
plugins/membrum/tools/: gen_factory_presets.js
plugins/ruinae/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  MANUAL.md  README.md  version.json
plugins/ruinae/docs/: index.html  manual-template.html  ruinae_signal_flow.dot
plugins/ruinae/resources/: au-info.plist  editor.uidesc  win32resource.rc  win32resource.rc.in
plugins/ruinae/src/: entry.cpp  plugin_ids.h  ruinae_types.h  version.h  version.h.in
plugins/ruinae/tests/: CMakeLists.txt  drain_preset_transfer.h  vstgui_test_stubs.cpp
plugins/shared/: CMakeLists.txt
plugins/shared/src/: plugin_factory.h
plugins/shared/tests/: CMakeLists.txt  test_adsr_display.cpp  test_arp_condition_lane.cpp  test_arp_lane_container.cpp  test_arp_lane_editor.cpp  test_arp_lane_header.cpp  test_arp_modifier_lane.cpp  test_color_scheme.cpp  test_color_utils.cpp  test_copy_paste.cpp  test_euclidean_dot_display.cpp  test_lfo_shape_selector.cpp  test_main.cpp  test_midi_event_dispatcher.cpp  test_oscillator_type_selector.cpp  test_playhead_trail.cpp  test_shared_display_bridge.cpp  test_step_pattern_editor.cpp  test_toggle_button.cpp  test_transform.cpp  test_update_checker.cpp  test_version_compare.cpp  test_xy_morph_pad.cpp  vstgui_test_stubs.cpp
tests/: CMakeLists.txt  benchmark_feedback_network.cpp  benchmark_mode_crossfade.cpp  benchmark_shimmer_delay.cpp  benchmark_spectral_delay.cpp
tests/regression/: test_approvals_main.cpp
tests/regression/approved/: test_approvals_main.OnePoleSmoother_convergence_matches_approved.approved.txt  test_approvals_main.applyGain_output_matches_approved.approved.txt  test_approvals_main.softClip_transfer_function_matches_approved.approved.txt
tests/test_helpers/: CMakeLists.txt  allocation_detector.h  allocation_operator_overrides.h  arp_shared_prefix_golden.h  artifact_detection.h  audio_features.h  buffer_comparison.h  editor_lifecycle_harness.h  enable_ftz_daz.h  golden_reference.h  midi_golden_compare.h  mock_data_browser.h  parameter_sweep.h  render_fingerprint.h  signal_metrics.h  spectral_analysis.h  spectral_analysis_test.cpp  statistical_utils.h  test_signals.h  uidesc_reachability.h  vst_event_list.h  vst_param_changes.h
tests/unit/: test_dsp_utils.cpp
tests/unit/core/: block_context_test.cpp  crossfade_utils_test.cpp  db_utils_test.cpp  dropdown_mappings_test.cpp  fast_math_test.cpp  grain_envelope_test.cpp  interpolation_test.cpp  note_value_mapping_test.cpp  note_value_test.cpp  pitch_utils_test.cpp  window_functions_test.cpp
tests/unit/features/: bbd_delay_test.cpp  digital_delay_age0_ramping_test.cpp  digital_delay_test.cpp  digital_envelope_noise_test.cpp  digital_width_processing_test.cpp  ducking_delay_test.cpp  freeze_mode_test.cpp  granular_delay_tempo_sync_test.cpp  granular_delay_test.cpp  multi_tap_delay_test.cpp  ping_pong_delay_test.cpp  reverse_delay_test.cpp  shimmer_delay_test.cpp  spectral_delay_test.cpp  tape_delay_test.cpp
tests/unit/parameters/: bbd_params_test.cpp  digital_params_test.cpp  ducking_params_test.cpp  freeze_params_test.cpp  multitap_params_test.cpp  reverse_params_test.cpp  shimmer_params_test.cpp  spectral_params_test.cpp  tape_params_test.cpp
tests/unit/preset/: preset_loading_consistency_test.cpp  preset_manager_test.cpp
tests/unit/primitives/: biquad_test.cpp  bit_crusher_rng_bias_test.cpp  bit_crusher_symmetric_quantization_test.cpp  fft_test.cpp  (+10 more)
tools/control_testbench/: CMakeLists.txt
tools/krate-render/: CMakeLists.txt
tools/membrum-fit/: AGENT_GUIDE.md  CMakeLists.txt  README.md
(+4573 files in other folders)
